# Sebastian

./: .gitignore  CLAUDE.md  README.md  agent_capabilities.json  config.json
Payload_Type/sebastian/: Dockerfile  Makefile  go.mod  go.sum  main.go
Payload_Type/sebastian/sebastian/agent_code/: 71  Cargo.toml  build.rs
Payload_Type/sebastian/sebastian/agent_code/proto/: dns.proto
Payload_Type/sebastian/sebastian/agent_code/src/: lib.rs  main.rs  test_utils.rs
Payload_Type/sebastian/sebastian/agent_code/src/commands/: caffeinate.rs  cat.rs  cd.rs  chmod.rs  clipboard.rs  clipboard_monitor.rs  config.rs  cp.rs  curl_cmd.rs  dialog_template.swift  download.rs  download_bulk.rs  drives.rs  execute_library.rs  exit.rs  getenv.rs  getuser.rs  head.rs  ifconfig.rs  jobkill.rs  jobs.rs  jsimport.rs  jsimport_call.rs  jxa.rs  keylog.rs  keys.rs  libinject.rs  link_tcp.rs  link_webshell.rs  list_entitlements.rs  listtasks.rs  ls.rs  lsopen.rs  mkdir.rs  mod.rs  mv.rs  persist_launchd.rs  persist_loginitem.rs  portscan.rs  print_c2.rs  (+26 more)
Payload_Type/sebastian/sebastian/agent_code/src/profiles/: dns.rs  dynamichttp.rs  http.rs  httpx.rs  mod.rs  tcp.rs  websocket.rs
Payload_Type/sebastian/sebastian/agent_code/src/responses/: mod.rs
Payload_Type/sebastian/sebastian/agent_code/src/structs/: mod.rs
Payload_Type/sebastian/sebastian/agent_code/src/tasks/: mod.rs
Payload_Type/sebastian/sebastian/agent_code/src/utils/: crypto.rs  files.rs  mod.rs  p2p.rs
Payload_Type/sebastian/sebastian/agentfunctions/: builder.go  caffeinate.go  cat.go  cd.go  chmod.go  config.go  (+70 more)
documentation-payload/sebastian/: _index.md
